# MediaCrawler

./: create_example_excel.py  pyproject.toml
config/: base_config.py
docs/: xhs_keywords_excel.md
media_platform/xhs/: core.py
store/xhs/: __init__.py
tools/: excel_reader.py
