[project]
name = "mediacrawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9.6"
dependencies = [ "aiofiles==23.2.1",
    "aiomysql==0.2.0",
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "async-timeout==5.0.1",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "contourpy==1.3.0",
    "cssselect==1.3.0",
    "cycler==0.12.1",
    "exceptiongroup==1.2.2",
    "fastapi==0.110.2",
    "fonttools==4.56.0",
    "greenlet==3.0.3",
    "h11==0.14.0",
    "httpcore==0.17.3",
    "httpx==0.24.0",
    "idna==3.10",
    "importlib-resources==6.5.2",
    "jieba==0.42.1",
    "jmespath==1.0.1",
    "kiwisolver==1.4.7",
    "lxml==5.3.1",
    "matplotlib==3.9.0",
    "numpy==2.0.2",
    "opencv-python==4.11.0.86",
    "packaging==24.2",
    "pandas==2.2.3",
    "parsel==1.9.1",
    "pillow==9.5.0",
    "playwright==1.42.0",
    "pydantic==2.5.2",
    "pydantic-core==2.14.5",
    "pyee==11.0.1",
    "pyexecjs==1.5.1",
    "pymysql==1.1.1",
    "pyparsing==3.2.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "pytz==2025.1",
    "redis==4.6.0",
    "requests==2.32.3",
    "six==1.17.0",
    "sniffio==1.3.1",
    "starlette==0.37.2",
    "tenacity==8.2.2",
    "typing-extensions==4.12.2",
    "tzdata==2025.1",
    "urllib3==2.3.0",
    "uvicorn==0.29.0",
    "w3lib==2.3.1",
    "wordcloud==1.9.3",
    "zipp==3.21.0",]

